6.0.0
- Change: The scalar analysis classes are now reused.
- Change: Renamed the language fallback key from 'text' to 'en'.
- Change: Dropped PHP 7.2 and 7.3 support.
- Change: Removed deprecated code.

5.0.4
- Change: Made implicitly nullable parameter declarations explicitly nullable.
- Bugfix: Catch a Throwable in the ProcessInteger.
- Bugfix: Better Base64 detection.

5.0.3
- Bugfix: Possible warning in file reader.
- Bugfix: Possible fatals in the file reader.
- Bugfix: Do not use the $GLOBALS recursion marker in PHP 8.1
  or higher.

5.0.2
- Added the possibility for plugins to overwrite the factory
  settings.
- Change: Removed deprecated code.
- Change: Some deprecations.
- Bugfix: The event
  'Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\DebugMethods::callMe::start'
  was called too late.
- Bugfix: Make use of the internal error callback in the string
  encoding class.
- Bugfix: Add the missing "Line no." to the translation.
- Bugfix: Added missing return types to the return type whitelist
  in the ReturnType comment analysis.
- Bugfix: Added missing types to the blacklist of none namespaces
  declaration types.
- Bugfix: Added missing translations for the setting.
- Bugfix: Do not access debug class values before their
  initialization.

5.0.1
- Change: Updated the unit tests to 10.5
- Bugfix: Added a missing end-event in the ThroughGetter iterator.

5.0.0
- Added immediately browser output to the output choices.
- Added default value analysis to the additional info.
- Added German localisation.
- Added serialized string pretty print.
- Added static cache to the filepath scalar analysis.
- Added support for the hidden properties of ext_dom classes.
- Added typed property analysis.
- Added the original value to the parameters of the scalar
  analysis events, so event listeners can actually do something
  useful.
- Added PCNTL support for logging.
- Added base64 analysis.
- Change: Removed deprecated code.
- Change: Drop PHP 7.1 support